basic gathering from API implemented

--- a/app/templates/counselor/upload_colleges.html
+++ b/app/templates/counselor/upload_colleges.html
@@ -6,14 +6,14 @@
    <div class="twelve wide column">
       <div class="row">
          <h2 class="ui header">
-            Upload College Data
+            Update College Data
             <div class="sub header">
-               Upload CSV of college descriptions and deadlines.
+               Automatically Update College Data
             </div>
          </h2>
          <h4 class="ui header">Instructions for Uploading Colleges</h4>
          <p>
-            To add more data to the college database, create an excel sheet with the following columns in order:
+            This feature is being tested.
             <ol>
                <li>College Name</li>
                <li>College description</li>
