--- a/app/templates/main/resources.html
+++ b/app/templates/main/resources.html
@@ -2,7 +2,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<div class="ui stackable grid centered container" style="margin-top:12px; margin-bottom:64px">
+<div class="ui stackable grid centered container" style="margin-top:12px; margin-bottom:14px">
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
             <h1 class="ui dividing header">Resources</h1>
@@ -16,6 +16,7 @@
 	        <div class="image">
 	            <img src="{{ imageSource }}">
 	        </div>
+
 	        <div class="middle aligned content">
 	            <a class="header" href="{{url}}"> {{ title }}</a>
 	            {% if description is not none %}
@@ -27,7 +28,7 @@
 	    </div>
 	{% endmacro %}
 
-<div class="ui three column stackable centered grid">
+<div class="ui three column stackable centered grid" style="padding-bottom: 100px;">
     <div class="ui items">
         {{ resource('Writing a Personal Essay','https://www.princetonreview.com/college-advice/college-essay', 'https://clipartstation.com/wp-content/uploads/2018/09/essay-clipart-4.jpg') }}
         {{ resource('Completing the FAFSA', 'https://www.youtube.com/watch?time_continue=3&v=LK0bbu0y5AM', 'https://moneydotcomvip.files.wordpress.com/2017/03/170310_fafsa.jpg') }}
