fixed footer spacing issues

--- a/app/templates/student/scholarships.html
+++ b/app/templates/student/scholarships.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     
-    <div class="twelve wide computer sixteen wide mobile centered column">
+    <div class="twelve wide computer sixteen wide mobile centered column" style="padding-bottom: 50px;">
         <h2 class="ui dividing header">
             Scholarships
             <div style="margin-top:5px; margin-bottom:5px;" class="sub header">
