--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -57,25 +57,25 @@
       </div>
     </div>
     <div class="nine wide column">
-      <div class="ui mini four statistics">
+      <div class="ui mini four statistics" style="justify-content: center;">
         <div class="statistic">
           <div class="label">Unweighted GPA</div>
-          <span style="padding:0.25em"></span>
+          <span style="padding:0.3em;"></span>
           <div class="value">{{ user.student_profile.unweighted_gpa }}</div>
         </div>
         <div class="statistic">
           <div class="label">Weighted GPA</div>
-          <span style="padding:0.25em"></span>
+          <span style="padding:0.3em"></span>
           <div class="value">{{ user.student_profile.weighted_gpa }}</div>
         </div>
         <div class="statistic">
           <div class="label">SAT</div>
-          <span style="padding:0.25em"></span>
+          <span style="padding:0.3em"></span>
           <div class="value">{{ sat }}</div>
         </div>
         <div class="statistic">
           <div class="label">ACT</div>
-          <span style="padding:0.25em"></span>
+          <span style="padding:0.3em"></span>
           <div class="value">{{ act }}</div>
         </div>
       </div>
@@ -429,7 +429,7 @@
 
 <!-- Display Scholarships Awarded -->
   <div class="row">
-      <div class="twelve wide column">
+      <div class="twelve wide column" style="padding-bottom: 50px;">
       <div style="color: #1A85D6;" class="ui horizontal divider">Scholarships</div>
         <table class="ui compact table">
           <thead class="full-width">
