--- a/app/templates/student/colleges.html
+++ b/app/templates/student/colleges.html
@@ -21,7 +21,7 @@
 
         {# Use overflow-x: scroll so that mobile views don't freak out
          # when the table is too wide #}
-        <div style="overflow-x: scroll;">
+        <div style="overflow-x: scroll; padding-bottom: 100px;">
             <table class="ui searchable sortable unstackable selectable celled table">
                 <thead>
                     <tr>
