removed resources from index.html

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -37,6 +37,9 @@
             application process. Students can research and compare colleges they're interested in, update their
             essay progress, and keep track of their scholarship information. Counselors can send out notifications
             and assign tasks to their students, among other things. We wish you luck! 
+
+            <!-- ]{{ page.render_inline_editor(editable_html_obj, current_user) }} -->
+
         </div>
     </div>
     
@@ -64,24 +67,11 @@
         </div>
     </div>
 
-   <div class="twelve wide computer sixteen wide mobile column">
-        <h1 class="ui dividing header">Resources</h1> <br />
-        <div class="ui three column stackable centered grid">
-            <div class="ui items">
-                {{ resource('Writing a Personal Essay') }}
-                {{ resource('Completing the FAFSA') }}
-                {{ resource('Interviews') }}
-                {{ resource('Choosing the Right Schools') }}
-            </div>
-        </div>
-    </div>
-
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
             <h1 class="ui dividing header">Survey</h1>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUGSDIw98c_E45nkGF_dYQ4gtp7vKwv1LpQxA7YcESA0j-eg/viewform?embedded=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
         
-            <!-- {{ page.render_inline_editor(editable_html_obj, current_user) }} -->
         </div>
     </div>
 </div>
