--- a/app/templates/main/calendar.html
+++ b/app/templates/main/calendar.html
@@ -5,7 +5,7 @@
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
             <h1 class="ui dividing header">Calendar</h1>
-            <iframe src="https://calendar.google.com/calendar/embed?src=ngs4impact%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=ngs4impact%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0;" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
