--- a/app/templates/main/college_profile.html
+++ b/app/templates/main/college_profile.html
@@ -84,7 +84,7 @@
             <p><strong>Acceptance Deadline</strong>: {{ college.acceptance_deadline }}</p>
         </div>
 
-        <div class="ui raised secondary green segment"> 
+        <div class="ui raised secondary green segment" style="margin-bottom: 64px;"> 
             <h1 style="color: #1A85D6;" class="ui header"> Student demographics </h1>
             {% if college.first_generation_percentage != 0 %}
             <p><strong>{{ college.first_generation_percentage }}%</strong> First Generation Students</p>
