--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="twelve wide computer sixteen wide mobile column">
+    <div class="twelve wide computer sixteen wide mobile column" style="padding-bottom: 70px;">
         <div class="row">
             <h1 class="ui dividing header">Survey</h1>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUGSDIw98c_E45nkGF_dYQ4gtp7vKwv1LpQxA7YcESA0j-eg/viewform?embedded=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
