--- a/app/templates/counselor/upload_colleges.html
+++ b/app/templates/counselor/upload_colleges.html
@@ -32,14 +32,8 @@
             Enter data as in the sample image above in an excel file.
             When you are finished entering all the data, save your excel sheet as a CSV file, then upload it to this portal and click "Submit."
          </p>
-         <h4 class="ui header">Upload CSV File</h4>
          <form class="ui form" method="POST" enctype="multipart/form-data">
-            <label id="college-data-file-label" for="college-data-file" class="ui icon button">
-               <i class="file icon"></i>
-               Open File</label>
-            <input type="file" accept=".csv" id="college-data-file" name="file" style="display:none">
-            <br /><br />
-            <input class="ui submit primary button" type="submit"/>
+            <input class="ui submit primary button" type="submit" value="Update Colleges"/>
          </form>
       </div>
    </div>
