--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -20,9 +20,11 @@
 
             <div class="ui three column grid">
                 {{ f.render_form_field(form.remember_me, extra_classes='column') }}
-                    <div class="center aligned column"> 
-                        <input id="passwordVisibilityToggle" type="checkbox" onclick="togglePasswordVisibility()"
-                        style="width: 17px;height: 17px;"> Show Password </input>
+                    <div class="field center aligned column"> 
+                        <div class= "ui checkbox">
+                            <input id="passwordVisibilityToggle" type="checkbox" onclick="togglePasswordVisibility()"
+                            style="width: 17px;height: 17px;"></input> <label for="passwordVisibilityToggle"> Show Password </label>
+                        </div>
                     </div>
                 <div class="right aligned column">
                     <a href="{{ url_for('account.reset_password_request') }}">Forgot password?</a>
