created document model

--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -82,6 +82,19 @@
     </div>
   </div>
 
+  <!-- UPLOAD TRANSCRIPT -->
+  <div class="row">
+    <div class="twelve wide column">
+      <div style="color: #1A85D6;" class="ui horizontal divider">
+        <h3>Transcript</h3>
+      </div>
+    </div>
+    <div class="nine wide column">
+      <a class="ui blue basic icon button" href="/student/profile/test_score/edit/{{ test.id }}"><i class="ui edit icon"></i></a>
+      <div class="ui red basic icon button delete-test-button" data-id="{{ test.id }}"><i class="ui remove icon"></i></div>
+    </div>
+  </div>
+
   <!-- DISPLAY TEST SCORES -->
   <div class="row">
     <div class="twelve wide column">
