only display low acceptance rate msg if it is low

--- a/app/templates/main/college_profile.html
+++ b/app/templates/main/college_profile.html
@@ -18,7 +18,11 @@
             <p><strong>Admission Rate</strong>: 
                 {{ college.admission_rate }}% 
             </p>
-            <p><em>&emsp; Note: Don't be deterred by a low acceptance rate if the rest of your profile fits the school!</em></p>
+
+                {% if college.admission_rate < 30.0 %}
+                <p><em>&emsp; Note: Don't be deterred by a low acceptance rate if the rest of your profile fits the school!</em></p>
+                {% endif %}
+
             {% endif %}
             
             {% if college.school_city != "" %}
