--- a/app/templates/student/resources.html
+++ b/app/templates/student/resources.html
@@ -6,6 +6,8 @@
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
             <h1 class="ui dividing header">Resources</h1>
+			{{ page.render_inline_editor(editable_html_obj, current_user) }}
+
         </div>
     </div>
 </div> 
