--- a/app/templates/counselor/resources.html
+++ b/app/templates/counselor/resources.html
@@ -13,7 +13,7 @@
 </div> 
 
 {% macro resource_m(id, title, url=none, imageSource="none", description=none) %}
-	    <div class="item" data-id="{{ id }}">
+	    <div class="item">
 	        <div class="image">
 	            <img src="{{ imageSource }}">
 	        </div>
@@ -25,7 +25,7 @@
 	                </div>
 				{% endif %}
 			</div>
-			<div class="ui red basic icon button delete-resource-button"><i class="ui remove icon"></i></div>
+			<div class="ui red basic icon button delete-resource-button" data-id="{{ id }}"><i class="ui remove icon"></i></div>
 
 	    </div>
 	{% endmacro %}
@@ -44,11 +44,13 @@
 	$(document).ready(function() {
 	  // Delete resource 
 	  $('.delete-resource-button').click(function() {
-		var url = '/student/profile/test_score/delete/' + $(this).data('id');
-		$(this).parent().parent().parent().remove();
+		console.log($(this).data('id'));
+		var url = '/counselor/resources/delete/' + $(this).data('id');
+		$(this).parent().remove();
+		console.log(url);
 		$.ajax({
 		  url: url,
-		  type: 'POST',
+		  type: 'GET',
 		  success: function(data) {
 			if (data.success !== "True") {
 			  alert("Sorry there was an error, please try again.");
@@ -56,7 +58,7 @@
 		  }
 		});
 	  });
-	}
+	});
 	
   </script>
 
