--- a/app/templates/counselor/edit_resource.html
+++ b/app/templates/counselor/edit_resource.html
@@ -6,7 +6,7 @@
     <div class="twelve wide column">
         <br />
         <a class="ui black basic button" href="{{ url_for('counselor.resources') }}">Cancel</a>
-        <div class="ui horizontal divider"><h1>EDIT RESOURCE</h1></div>
+        <div class="ui horizontal divider"><h1>{{ header }}</h1></div>
         {{ f.render_form(form, extra_classes='fluid') }}
     </div>
 </div>
