--- a/app/templates/student/resources.html
+++ b/app/templates/student/resources.html
@@ -1,40 +1,68 @@
 {% import 'macros/page_macros.html' as page %}
 {% extends 'layouts/base.html' %}
 
+
+{% macro resource_m(id, title, url=none, imageSource="none", description=none) %}
+	<div class="ui segment resource_div" style="text-align:center;" onclick="window.location.href='{{url}}';"> 
+		<div class="image">
+			<img style="max-width: 100px;" src="{{ imageSource }}">
+		</div>
+		
+		<div class="middle aligned content">
+			<h4 style="color: blue"> {{ title }} </h4>
+			<div class="description" style="margin-bottom: 20px;">
+				<p style="color:black"> {{ description }}</p>
+			</div>
+		</div>
+
+	</div>
+{% endmacro %}
+
+
+
 {% block content %}
 <div class="ui stackable grid centered container" style="margin-top:12px; margin-bottom:14px">
     <div class="twelve wide computer sixteen wide mobile column">
-        <div class="row">
-            <h1 class="ui dividing header">Resources</h1>
+        <div class="row" style="margin-bottom: 50px;">
+			<h1 class="ui dividing header">Resources</h1>
 			{{ page.render_inline_editor(editable_html_obj, current_user) }}
-
         </div>
+
+	
+		<div class="ui three column stackable centered container" style="padding-bottom: 100px;">
+			<div class="ui items">
+				{% for r in resources | sort(attribute='title') %}
+					{{ resource_m(r.id, r.title, r.resource_url, r.image_url, r.description) }}
+				{% endfor %}  
+			</div>
+		</div>
+
+
     </div>
 </div> 
 
-{% macro resource_m(title, url=none, imageSource="none", description=none) %}
-	    <div class="item">
-	        <div class="image">
-	            <img src="{{ imageSource }}">
-	        </div>
-	        <div class="middle aligned content">
-	            <a class="header" href="{{url}}"> {{ title }}</a>
-	            {% if description is not none %}
-	                <div class="description">
-	                    <p> {{ description }}</p>
-	                </div>
-	            {% endif %}
-	        </div>
-	    </div>
-	{% endmacro %}
-
-<div class="ui three column stackable centered grid" style="padding-bottom: 100px;">
-    <div class="ui items">
-		{% for r in resources | sort(attribute='title') %}
-			 {{ resource_m(r.title, r.resource_url, r.image_url, r.description) }}
-		{% endfor %}  
-    </div>
-</div>
 
 <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+
+		// Delete resource 
+		$('.delete-resource-button').click(function() {
+			var url = '/counselor/resources/delete/' + $(this).data('id');
+			$(this).parent().remove();
+			$.ajax({
+			url: url,
+			type: 'GET',
+			success: function(data) {
+				if (data.success !== "True") {
+				alert("Sorry there was an error, please try again.");
+				}
+			}
+			});
+	  });
+	});
+
+  </script>
+
 {% endblock %}
