added resources to dashboard

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -51,6 +51,13 @@
                 {{ dashboard_option('Upload Scattergram Data', 'counselor.upload_scattergram',
                 description='Upload college acceptance data for scattergrams', icon='bar chart icon')}}
             </div>
+            <h4 class="ui dividing header">Resources</h4>
+            <div class="ui two column stackable grid">
+                {{ dashboard_option('View Resources', 'counselor.resources',
+                description='View and edit resources', icon='linkify icon') }}
+                {{ dashboard_option('Add Resource', 'counselor.add_resource',
+                description='Add a new resource', icon='plus icon') }}
+            </div>
             <h4 class="ui dividing header">SMS Alerts</h4>
             <div class="ui two column stackable grid">
                 {{ dashboard_option('Manage SMS Alerts', 'counselor.manage_alerts',
