--- a/app/templates/counselor/index.html
+++ b/app/templates/counselor/index.html
@@ -56,6 +56,13 @@
                 {{ dashboard_option('Edit Scholarship', 'counselor.edit_scholarship_step1',
                 description='Edit existing scholarship profile', icon='edit icon')}}
             </div>
+            <h4 class="ui dividing header">Resources</h4>
+            <div class="ui two column stackable grid">
+                {{ dashboard_option('View Resources', 'counselor.resources',
+                description='View and edit resources', icon='linkify icon') }}
+                {{ dashboard_option('Add Resource', 'counselor.add_resource',
+                description='Add a new resource', icon='plus icon') }}
+            </div>
             <h4 class="ui dividing header">SMS Alerts</h4>
             <div class="ui two column stackable grid">
                 {{ dashboard_option('Manage SMS Alerts', 'counselor.manage_alerts',
