--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -70,7 +70,7 @@
 
 
         <button type="button" id="footer_toggle" class="pure-material-button-contained btn btn-primary bmd-btn-fab" onclick="toggleLanguage()">
-          &#x1F310
+          <i class="globe icon"></i>
         </button>
         <div id="language_footer" class="ui inverted vertical footer segment">
             <div class="ui centered container">
