fixed a redirect error

--- a/app/templates/counselor/student_profile.html
+++ b/app/templates/counselor/student_profile.html
@@ -115,7 +115,7 @@
         <tfoot class="full-width">
           <tr>
             <th colspan="4">
-              <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_test_score', student_profile_id=user.student_profile.id)}}">
+              <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
                 <i class="plus icon"></i> Add Test Score
               </a>
             </th>
