--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -90,8 +90,9 @@
       </div>
     </div>
     <div class="nine wide column">
-      <object data="http://www.pdf995.com/samples/pdf.pdf" type="application/pdf" width="300" height="200">
-        <a href="http://www.pdf995.com/samples/pdf.pdf">test.pdf</a>
+      <!-- <canvas id="the-canvas"></canvas> -->
+      <object data="{{ url_for('static', filename='secure/01_Vectors.pdf', _external=True) }}" type="application/pdf" width="300" height="200">
+        <a href="{{ url_for('static', filename='secure/01_Vectors.pdf', _external=True) }}">test.pdf</a>
       </object>
       <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="plus icon"></i> Add Transcript
@@ -99,7 +100,6 @@
       <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.edit_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="ui edit icon"></i> Edit Transcript
       </a>
-
     </div>
   </div>
 
