added add college button to colleges page, redir to college page

--- a/app/templates/counselor/colleges.html
+++ b/app/templates/counselor/colleges.html
@@ -18,10 +18,13 @@
                     </div>
                 </div>
                 <div class="ui item">
-                    <a class="ui black basic button" href="{{ url_for('counselor.upload_college_file') }}">Upload Colleges</a>
+                    <a class="ui black basic button" href="{{ url_for('counselor.add_college') }}">Add College via This Website</a>
                 </div>
                 <div class="ui item">
-                    <a class="ui black basic button" href="{{ url_for('counselor.upload_scattergram') }}">Upload Scattergram Data</a>
+                    <a class="ui black basic button" href="{{ url_for('counselor.upload_college_file') }}">Add College via Excel</a>
+                </div>
+                <div class="ui item">
+                    <a class="ui black basic button" href="{{ url_for('counselor.upload_scattergram') }}">Add Scattergram Data</a>
                 </div>
             </div>
 
