began auto update process

--- a/app/templates/counselor/colleges.html
+++ b/app/templates/counselor/colleges.html
@@ -23,6 +23,9 @@
                 <div class="ui item">
                     <a class="ui black basic button" href="{{ url_for('counselor.upload_scattergram') }}">Upload Scattergram Data</a>
                 </div>
+                <div class="ui item">
+                    <a class="ui black basic button" href="{{ url_for('counselor.update_all_colleges') }}">Update All Colleges</a>
+                </div>
             </div>
 
             {# Use overflow-x: scroll so that mobile views don't freak out
