Made error UI uniform

--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1 style="margin-left:100px; margin-top:50px;" class="ui header">404</h1>
+    <h1 style="margin-left:100px; margin-top:50px;" class="ui header">404 Error</h1>
     <h3 style="margin-left:100px;" class="ui header">Page not found</h3>
 {% endblock %}
