--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1 class="ui header">500</h1>
-    <h3 class="ui header">Internal Server Error</h3>
+    <h1 class="ui header" style="margin-top:50px; margin-left:100px;">500 Error</h1>
+    <h3 class="ui header" style="margin-left:100px;">Internal Server Error</h3>
 {% endblock %}
