--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1 class="ui header">403</h1>
-    <h3 class="ui header">Forbidden</h3>
+    <h1 style="margin-left:100px; margin-top:50px;" class="ui header">403 Error</h1>
+    <h3 style="margin-left:100px;" class="ui header">Forbidden Permissions</h3>
 {% endblock %}
