--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
         <script src= {{ url_for('static', filename='scripts/footer.js') }}></script>
+        <link href={{ url_for('static', filename='styles/app.css') }} rel="stylesheet">
 
     </head>
     <body>
