--- a/app/templates/main/college_profile.html
+++ b/app/templates/main/college_profile.html
@@ -5,66 +5,108 @@
     <h1 style="font-size:4.5em; color:white; text-align:center; padding-top:100px; padding-bottom:30px; font-family: 'IBM Plex Serif', serif;">{{ college.name }}</h1>
 
         {% if college.school_url != "" %}
-        <button class="ui green button" onclick="window.open('http://{{ college.school_url }}', '_blank')"> School Website </button>
+        <!-- <button class="ui green button" onclick="window.open('http://{{ college.school_url }}', '_blank')"> School Website </button> -->
         {% endif %}
 
         {% if college.price_calculator_url != '' %}
-        <button class="ui green button" onclick="window.open('{{ college.price_calculator_url }}', '_blank')"> Net Price Calculator </button>
+        <!-- <button class="ui green button" onclick="window.open('{{ college.price_calculator_url }}', '_blank')"> Net Price Calculator </button> -->
         {% endif %}
 
         {% if college.school_url != "" %}
-        <button class="ui green button" onclick="window.open('https://collegescorecard.ed.gov/school/?{{ college.scorecard_id }}', '_blank')"> Net Price Calculator </button>
+        <!-- <button class="ui green button" onclick="window.open('https://collegescorecard.ed.gov/school/?{{ college.scorecard_id }}', '_blank')"> College Scorecard Profile </button> -->
         {% endif %}
-   
-
 
 </div>
 
 <div class="ui stackable grid container" style="margin-top:12px; margin-bottom:64px">
     <div class="twelve wide computer sixteen wide mobile centered column">
-        <div class="ui raised secondary green segment">
-            <h1 style="color: #1A85D6;" class="ui header">{{college.name}} at a Glance</h1>
-            <p><strong>Description:</strong> {{ college.description }} </p>
+        <div class="ui raised secondary green segment" style="text-align:center;">
+            <h1 style="color:#1A85D6;margin-bottom:5px;" class="ui header">{{college.name}} at a Glance</h1>
+            <p style="font-size:18px;margin-bottom:15px;">{{ college.description }} </p>
+
+            <div class="ui three column doubling stackable grid container stretched">
+                <div class="column">
+                    <div class="ui segment" style="text-align: center;"> 
+                        <h2 style="font-size: 55px;margin-bottom:0px;"> {{ college.admission_rate }}% </h1>
+                        <h3 style="font-size: 15px;margin-top:0px;"> Acceptance Rate </h2>
+                        {% if college.admission_rate < 30.0 %}
+                        <em>&emsp; Note: Don't be deterred by an acceptance rate if the rest of your profile fits the school!</em>
+                        {% endif %}
+                    </div>
+                </div>
+
+                <div class="column">
+                    {% if college.sat_score_average_overall != 0.0 %}
+                    <div class="ui segment" style="text-align:center;" >
+                        <h2 style="font-size:34px;margin:0px;">{{ "{0:,.0f}".format(college.sat_score_average_overall|round|int) }}</h2>
+                        <h3 style="margin:0px;font-size:13px;"> Average SAT Score </h3>
+                    </div>
+                    {% endif %}
+                    {% if college.act_score_average_overall != 0.0 %}
+                    <div class="ui segment" style="text-align:center;">
+                        <h2 style="font-size: 34px;margin:0px;">{{ college.act_score_average_overall|round|int }}</h2>
+                        <h3 style="margin:0px;font-size:13px;"> Average ACT Score </h3>
+                    </div>
+                    {% endif %}
+                </div>
+
+                <div class="column">
+                    {% if college.school_city != "" %}
+                    <div class="ui segment" style="text-align:center">
+                        <h2 style="font-size: 20px;margin:0px;">{{ college.school_city }}, {{ state_full_name }}</h2>
+                        <h3 style="margin:0px;font-size:13px;"> Location </h3>
+                    </div>
+                    {% endif %}  
+                    
+                    {% if college.school_city != "" %}
+                    <div class="ui segment" style="text-align:center">
+                        <h2 style="font-size: 34px;margin:0px;">{{"{0:,.0f}".format(college.school_size) }}</h2>
+                        <h3 style="margin:0px;font-size:13px;"> Undergraduate Size </h3>
+                    </div>
+                    {% endif %}  
+                </div>
+            </div>
             
-            {% if college.admission_rate != 0.0 %}
-            <p><strong>Admission Rate</strong>: 
-                {{ college.admission_rate }}% 
-            </p>
-
-            {% if college.admission_rate < 30.0 %}
-            <p><em>&emsp; Note: Don't be deterred by a low acceptance rate if the rest of your profile fits the school!</em></p>
-            {% endif %}
-
-            {% endif %}
-            
-            {% if college.school_city != "" %}
-            <p><strong>Location</strong>: 
-                {{ college.school_city }}, {{ state_full_name }}
-            </p>
-            {% endif %}
-
-            {% if college.sat_score_average_overall != 0.0 %}
-            <p><strong>Average SAT Score</strong>: 
-                {{ college.sat_score_average_overall }}
-            </p>
-            {% endif %}
-
-            {% if college.act_score_average_overall != 0.0 %}
-            <p><strong>Average ACT Score</strong>: 
-                {{ college.act_score_average_overall }}
-            </p>
-            {% endif %}
-
-            {% if college.school_size != 0 %}
-            <p><strong>Undergraduate size</strong>: 
-                {{ college.school_size }}
-            </p>
-            {% endif %}
 
             {% if college.is_hispanic_serving == 1%}
                 <p><strong>This school is a hispanic-serving institution.</strong>: 
             {% endif %}
+        </div>
 
+
+        <div class="ui raised secondary green segment" style="text-align:center;">
+            <h1 style="color:#1A85D6;margin-bottom:15px;" class="ui header">Useful Links</h1>
+            
+            <div class="ui three column doubling stackable grid container stretched">
+                <div class="column">
+                    <div class="ui segment college_link uni_web" onclick="window.open('http://{{ college.school_url }}', '_blank')"> 
+                        <div class="college_link_icon_padding link_icon">
+                            <i class="university icon link_icon"></i>
+                        </div>
+                        School Website
+                    </div>
+                </div>
+                
+                <div class="column">
+                    <div class="ui segment college_link uni_cost" onclick="window.open('{{ college.price_calculator_url }}', '_blank')"> 
+                        <div class="college_link_icon_padding">
+                            <i class="dollar sign icon link_icon"></i>
+                        </div>
+                        Net Cost Calculator 
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="ui segment college_link uni_scd" style="background-color:#5f9d30;"onclick="window.open('https://collegescorecard.ed.gov/school/?{{ college.scorecard_id }}', '_blank')"> 
+                        <div class="college_link_icon_padding">
+                            <i class="chart bar icon link_icon"></i>
+                        </div>
+                        College Scorecard Profile
+                    </div>
+                </div>
+                
+            </div>
+            
 
         </div>
 
@@ -97,7 +139,7 @@
             {% endif %} 
 
 
-            {% if college.net_price_0_30000 != 0 %}
+            {% if college.net_price_0_30000 is not none %}
              <table class="ui celled padded table">
                  <tr>
                     <th>Family Income</th>
